# openclaw-ur5e-ursim-skill

./: .gitignore  README.md  start_ursim.bat  start_ursim.ps1  stop_ursim.bat  stop_ursim.ps1
bridge/: README.md  pyproject.toml  start_ur5e_mcp.bat  start_ur5e_mcp.ps1
bridge/ur5e_bridge/: __init__.py  actions.py  config.py  dashboard.py  guards.py  rtde_recipe.xml  rtde_state.py  server.py  urscript.py
skills/ur5e-control/: OPENCLAW_QUICKSTART.md  README.md  SKILL.md  config.example.yaml  config.real.example.yaml  config.ursim.yaml  openclaw.mcp.example.json  safety_checklist.md
tests/: conftest.py  test_actions.py  test_config.py  test_guards.py
